gitops/nonprod/overlays/prod/ingresses-maintenance.yaml
# This file defines ingress resources that effectively put the frontend application in "maintenance mode".
#
# To enable maintenance mode, reference this file in kustomization.yaml.
# This will route traffic to the maintenance and OAuth proxy services instead of the main application.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: srv024.service.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-internal
  labels:
    app.kubernetes.io/name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k # required for OAuth proxy
spec:
  ingressClassName: nginx
  rules:
    - host: canada-disability-benefit-plan.prod-dp-internal.dts-stn.com #TODO - is this the correct host?
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: oauth-proxy
