gitops/nonprod/overlays/prod/ingresses-renew-error-404.yaml
#TODO do we need this file?
# This file defines ingress resources that put the renewal application into "maintenance mode".
#
# To enable maintenance mode, reference this file in kustomization.yaml.
# This will route traffic for the online application to the maintenance and OAuth proxy services,
# while preserving access to the allowed routes.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/en/letters(.*)$ /en/protected/letters$1 redirect;
      rewrite ^/fr/lettres(.*)$ /fr/protege/lettres$1 redirect;
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: srv024.service.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /.+/(protected/renew|protege/renouveler|renew|renouveler)(/.+)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: error-404
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-internal
  labels:
    app.kubernetes.io/name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k # required for OAuth proxy
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/en/letters(.*)$ /en/protected/letters$1 redirect;
      rewrite ^/fr/lettres(.*)$ /fr/protege/lettres$1 redirect;
spec:
  ingressClassName: nginx
  rules:
    - host: canada-disability-benefit-plan.prod-dp-internal.dts-stn.com #TODO - is this the correct host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /.+/(protected/renew|protege/renouveller|renew|renouveller)(/.+)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: error-404
                port:
                  name: http
